# swiftmail

./: pyproject.toml
swiftmail/: __init__.py
